--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   font-family: "Kanit", sans-serif;
+  scroll-behavior: smooth;
 }
 body {
   transition: 0.3s ease-out;
@@ -67,4 +68,13 @@ a {
 }
 .bd-mode-toggle {
   z-index: 1500;
+}
+.parallax-container {
+  position: relative;
+  overflow: hidden;
+  height: 100%;
+}
+
+.parallax {
+  position: absolute;
 }
